--- a/xall/x68/195275-send-later-3/src/_locales/de/messages.json
+++ b/xall/x68/195275-send-later-3/src/_locales/de/messages.json
@@ -911,6 +911,18 @@
     "message": "Warnung: Geplante Nachrichten",
     "description": ""
   },
+  "SanityCheckCorruptFolderWarning": {
+    "message": "Wenn Ihnen diese Zahlen nicht plausibel erscheinen, ist möglicherweise Ihr Postausgang und/oder der Entwürfe-Ordner beschädigt. In diesem Fall empfiehlt es sich, diese zu komprimieren und neu aufzubauen, bevor Sie Send Later aktivieren. Siehe <$CORRUPTOUTBOXDOCS$> und <$CORRUPTDRAFTDOCS$> für weitere Details.",
+    "description": "Part of \"sanity check\" prompt potentially displayed during version migration. If there are scheduled messages in the user's Drafts and/or Outbox folders, then the user will be prompted to confirm that the message counts are accurate. This message is preceeded by one or both of the translation strings: \"SanityCheckDrafts\" and/or \"SanityCheckOutbox\".",
+    "placeholders": {
+      "CorruptOutboxDocs": {
+        "content": "https://github.com/Extended-Thunder/send-later/wiki/Troubleshooting#Corrupt_Outbox_folder"
+      },
+      "CorruptDraftDocs": {
+        "content": "https://github.com/Extended-Thunder/send-later/wiki/Troubleshooting#Corrupt_Drafts_folders"
+      }
+    }
+  },
   "ScheduledMessagesWarningQuitRequested": {
     "message": "Es gibt noch Nachrichten, deren Senden geplant ist. „Später Senden” kann Nachrichten nur versenden, wenn $1 geöffnet ist. Möchten Sie das Programm dennoch schließen?",
     "description": ""
