--- a/xall/x68/195275-send-later-3/src/_locales/el/messages.json
+++ b/xall/x68/195275-send-later-3/src/_locales/el/messages.json
@@ -908,10 +908,8 @@
     "message": "Έχετε $1 μη απεσταλμένο μήνυμα(τα) που θα ενεργοποιηθεί για να αποσταλεί την επόμενη φορά που θα φθάσει η ώρα κάποιου προγραμματισμένου μηνύματος."
   },
   "SanityCheckDrafts": {
-    "message": "Έχετε $1 μήνυμα(τα) προγραμματισμένο(α) για αποστολή από το Send Later.\nΤο επόμενο έχει προγραμματιστεί για $2."
-  },
-  "SanityCheckCorruptFolderWarning": {
-    "message": "Εάν αυτοί οι αριθμοί δεν σας φαίνονται σωστοί, μπορεί να έχετε κατεστραμμένους φακέλους Εξερχομένων ή/και Προσχέδια. Σε αυτή την περίπτωση συνιστάται να συμπιέσετε και να ξαναχτίσετε αυτούς τους φακέλους πριν από την ενεργοποίηση του Send Later. Δείτε <https://blog.kamens.us/send-later/#corrupt-outbox> και <https://blog.kamens.us/send-later/#corrupt-drafts-error> για περισσότερες λεπτομέρειες."
+    "message": "Έχετε $1 μήνυμα(τα) προγραμματισμένο(α) για αποστολή από το Send Later.\nΤο επόμενο έχει προγραμματιστεί για $2.",
+    "description": "$1 is replaced with a number, and $2 is replaced with the date/time of the next scheduled message."
   },
   "SanityCheckConfirmOptionMessage": {
     "message": "Επιλέξτε μία από τις επιλογές:\n  \"ΟΚ\": Συνεχίστε ως συνήθως. Δεν θα ερωτηθείτε ξανά.\n\n  “Ακύρωση”: Το Send Later θα απενεργοποιηθεί μέσω των δικών του προτιμήσεων.\n                    για να ενεργοποιήσετε ξανά το Send Later, πηγαίνετε στη σελίδα επιλογών και ορίστε\n                    την προτίμηση “Ελέγξτε κάθε ___ λεπτά” σε μη μηδενική τιμή.\n                    Θα λάβετε αυτό το μήνυμα και πάλι την επόμενη φορά που θα επανεκκινήσετε\n                    το Thunderbird"
