--- a/xall/x68/195275-send-later-3/src/_locales/pt/messages.json
+++ b/xall/x68/195275-send-later-3/src/_locales/pt/messages.json
@@ -139,6 +139,10 @@
     "message": "semanalmente",
     "description": ""
   },
+  "resetPrefsButton": {
+    "message": "Repor as preferências",
+    "description": ""
+  },
   "saveDefaultsLabel": {
     "message": "Guardar estes valores como predefinidos",
     "description": ""
@@ -221,6 +225,14 @@
   },
   "userGuideLabel": {
     "message": "Guia do utilizador",
+    "description": ""
+  },
+  "errorDateInPast": {
+    "message": "A data selecionada é anterior à data atual",
+    "description": ""
+  },
+  "DelayFunctionHelp": {
+    "message": "Adiar a mensagem por alguns minutos. O primeiro argumento será o tempo a adiar.",
     "description": ""
   },
   "sendlater.prompt.sendlater.label": {
@@ -381,6 +393,10 @@
   },
   "donatelink.value": {
     "message": "Doar",
+    "description": ""
+  },
+  "advancededitor.title": {
+    "message": "Editor avançado de configurações",
     "description": ""
   },
   "editorlink.value": {
@@ -683,6 +699,9 @@
     "message": "Send Later: A pasta $1 pode estar corrompida. Por favor abra as suas propriedades e repare-a. Veja https://extended-thunder.github.io/send-later/#corrupt-drafts-error.",
     "description": ""
   },
+  "CorruptFolderErrorDetails": {
+    "message": "Aparentemente, parece que a mensagem “$1” $2 já foi enviada, mas ainda existe na pasta Rascunhos. Pode ser sintoma de um problema mais grave. Pode simplesmente tentar apagar (ou reagendar) a mensagem em questão.\n\nSend Later irá ignorar esta mensagem, mas continuará a processar as outras mensagens programadas quando fechar este alerta."
+  },
   "MessageResendError": {
     "message": "Send Later: Tentativa de re-enviar mensagem já enviada?! Provavelmente a sua Caixa de Saída ou a pasta de Rascunhos $1 está corrompida. Por favor repare-as tal como descrito em https://extended-thunder.github.io/send-later/#corrupt-outbox.",
     "description": ""
@@ -895,6 +914,34 @@
     "message": "Aviso de mensagens agendadas",
     "description": ""
   },
+  "CompactionFailureWithError": {
+    "message": "A compressão das pastas de Saída e/ou Rascunhos falharam com erro:"
+  },
+  "CompactionFailureNoError": {
+    "message": "A compressão de $1 falhou sem mensagem de erro."
+  },
+  "SanityCheckOutbox": {
+    "message": "Existem $1 mensagem(ns) não enviada(s) que será(ão) enviadas da próxima vez que ocorrer um agendamento."
+  },
+  "SanityCheckDrafts": {
+    "message": "Existem $1 mensagem(ns) agendadas para serem enviadas pelo Send Later.\nA próxima está agendada para $2.",
+    "description": "$1 is replaced with a number, and $2 is replaced with the date/time of the next scheduled message."
+  },
+  "SanityCheckCorruptFolderWarning": {
+    "message": "Se estes valores não parecem corretos, pode ter uma caixa de saída e/ou rascunhos corrompida. Nesse caso, é recomendado que compacte e recrie essas pastas antes de ativar Send Later. Veja <$CORRUPTOUTBOXDOCS$> e <$CORRUPTDRAFTDOCS$> para mais detalhes.",
+    "description": "Part of \"sanity check\" prompt potentially displayed during version migration. If there are scheduled messages in the user's Drafts and/or Outbox folders, then the user will be prompted to confirm that the message counts are accurate. This message is preceeded by one or both of the translation strings: \"SanityCheckDrafts\" and/or \"SanityCheckOutbox\".",
+    "placeholders": {
+      "CorruptOutboxDocs": {
+        "content": "https://github.com/Extended-Thunder/send-later/wiki/Troubleshooting#Corrupt_Outbox_folder"
+      },
+      "CorruptDraftDocs": {
+        "content": "https://github.com/Extended-Thunder/send-later/wiki/Troubleshooting#Corrupt_Drafts_folders"
+      }
+    }
+  },
+  "SanityCheckConfirmOptionMessage": {
+    "message": "Selecione uma das opções:\n  \"OK\": prossiga como de costume. Você não será solicitada confirmação novamente.\n\n  \"Cancelar\": Send Later será desativado nas suas preferências.\n                    Para reativar o Send Later, vá para sua página de opções e defina\n                    a opção \"Verifique a cada ___ minutos\" para um valor que não seja zero.\n                    Receberá este aviso novamente na próxima vez que reiniciar o\n                    Thunderbird"
+  },
   "ScheduledMessagesWarningQuitRequested": {
     "message": "Há mensagens agendadas para serem enviadas. O Send Later apenas pode enviar mensagens quando $1 está a correr. Tem a certeza de que pretende sair?",
     "description": ""
@@ -902,6 +949,12 @@
   "ScheduledMessagesWarningQuit": {
     "message": "O Send Later apenas pode enviar mensagens quando $1 está a correr. Por favor lembre-se de o reiniciar antes da data agendada para as mensagens serem enviadas.",
     "description": ""
+  },
+  "EncryptionIncompatTitle": {
+    "message": "Problema de compatibilidade de criptografia"
+  },
+  "EncryptionIncompatText": {
+    "message": "Esta mensagem é criptografada com a sua própria chave PGP e, portanto, não pode ser entregue aos destinatários. Veja esta discussão para mais detalhes sobre porque está vendo esta mensagem: https://github.com/Extended-Thunder/send-later/discussions/200"
   },
   "EnigmailIncompatTitle": {
     "message": "Problema de compatibilidade do Send Later / Enigmail",
@@ -1078,5 +1131,9 @@
   "CheckingMessage": {
     "message": "A VERIFICAR MENSAGENS",
     "description": ""
+  },
+  "LongDescription": {
+    "message": "Este complemento altera o comando “Send Later” (Ctrl+Shift+Return) na janela de composição de mensagens, para que, em vez de apenas copiar a mensagem para a caixa de saída para que seja enviada da próxima vez que ficar online ou fazer \"Enviar mensagens não enviadas\", um diálogo aparece que lhe permite especificar quando a mensagem será enviada.\n\nPode especificar uma hora e uma data específica, ou clicar em \"15 minutos mais tarde\", \"30 minutos mais tarde\" ou \"2 horas mais tarde\", ou definir atalhos personalizados. Também pode agendar uma mensagem para ser enviada repetidamente usando regras simples (a cada N horas, dias, etc.) ou funções personalizáveis.\n\nSend Later depende da poderosa biblioteca de análise de datas fornecida por Andrew Plummer <a href=\"https://sugarjs.com/\">Sugar.js library</a>.\n\nFeedback e relatórios de erros são muito bem-vindos e podem ser enviados através da <a href=\"https://github.com/Extended-Thunder/send-later/discussions\">Página do projeto</a>.",
+    "description": "This text will be displayed on the ATN page, as well as the \"Details\" tab in Thunderbird's extension manager."
   }
 }
