--- a/xall/x68/986334-open-with/src/_locales/en/messages.json
+++ b/xall/x68/986334-open-with/src/_locales/en/messages.json
@@ -234,6 +234,9 @@
 	"links_opera": {
 		"message": "Open With for Opera"
 	},
+	"links_thunderbird": {
+		"message": "Open With for Thunderbird"
+	},
 	"menu_contexts_label": {
 		"message": "Show in context menus of:"
 	},
