--- a/xall/x68/987719-display-mail-user-agent-t/src/CHANGELOG
+++ b/xall/x68/987719-display-mail-user-agent-t/src/CHANGELOG
@@ -5,6 +5,9 @@ Created by: Christian Weiske <cweiske@cweiske.de>
 Further development by: Juergen Ernst <dispmua@juergen-ernst.de>
 Forked by: Toshi_ <dispmua@outlook.com>
 
+2.1.42 2021-1-28
+- Some more icon(2114 now)
+
 2.1.41 2021-1-20
 - Some more icon(2113 now)
 
